src/builder/tests/snapshots/ciboulette2postgres__builder__tests__single_rel_cte__sparse.snap
---
source: src/builder/tests/single_rel_cte.rs
expression: res

---
(
    "SELECT \"public\".\"favorite_color\".\"id\"::TEXT AS \"id\", $0::TEXT AS \"type\", NULL::json  AS \"data\" FROM \"public\".\"favorite_color\" WHERE \"public\".\"favorite_color\".\"id\" IN (SELECT \"public\".\"cte_peoples\".\"favorite_color\" FROM \"public\".\"cte_peoples\")",
    Ciboulette2SqlArguments {
        inner: [
            Text(
                Some(
                    "favorite_color",
                ),
            ),
        ],
    },
)
